# RpiControlCore

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  install.sh  main.cpp  main.hpp
src/: audiocontrol.cpp  audiocontrol.hpp  connectivity.cpp  connectivity.hpp  deviceproperties.cpp  deviceproperties.hpp  filemanager.cpp  filemanager.hpp  searchdashboard.cpp  searchdashboard.hpp
utils/: utils.cpp  utils.hpp
